Revision history for {{ $dist->name }}:

{{$NEXT}}
  [Incompatible Changes]
  - Increased minimum Perl version to v5.14.

  [Documentation]
  - Bumped copyright year.

  [Other]
  - Updated MANIFEST.SKIP rules.

  - Sign distribution.

v0.3.1    2022-04-22 23:47:45+01:00 Europe/London
  [Documentation]
  - Fix typo in SYNOPSIS.

v0.3.0    2022-04-21 17:13:04+01:00 Europe/London
  [Incompatabilies]
  - Remove support for Perls older than v5.10.

  [Documentation]
  - Bump copyright year.

  - Fix encoding of links in README.

  [Toolchain]
  - Remove bad MANIFEST.SKIP rule.

v0.2.0    2018-11-18 21:04:29+00:00 Europe/London
  [Enhancements]
  - Add strict and coerce options to enforce/coerce on set_column.

  [Incompatabilies]
  - Moved the isa attribute key into the extra.type key, so as to avoid
    conflicts.

v0.1.2    2018-11-18 16:36:27+00:00 Europe/London
  [Enhancements]
  - Removed reliance on Hash::Merge.

  [Other]
  - Added DBIx::Class as an explicit prerequisite.

  - Removed prereq on namespace::autoclean.

v0.1.1    2018-11-18 12:01:40+00:00 Europe/London
  [Tests]
  - Added diagnostics for cpantesters.

v0.1.0    2018-11-18 01:35:56+00:00 Europe/London
- Initial release on CPAN,

Note that an earlier version was submitted as a pull request to
DBIx-Class-Helpers.  It was not accepted due to the addition of
prerequisites for Types::SQL (and implicity Type::Tiny).